# kren

./: .gitignore  Cargo.toml  LICENSE  README.md  build_error.txt  compile_errors.txt  compile_errors2.txt  demo_reader.js  test_output.txt
docs/: social_posts.md
kren-core/: Cargo.toml
kren-core/src/: buffer.rs  error.rs  header.rs  lib.rs
kren-core/src/platform/: mod.rs  unix.rs  windows.rs
kren-core/tests/: bench.rs  stress.rs
kren-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
kren-node/src/: lib.rs
kren-node/test/: test.js
kren-python/: Cargo.toml  README.md  pyproject.toml
kren-python/python/kren/: __init__.py
kren-python/src/: lib.rs
kren-python/tests/: test_kren.py
