[package]
name = "kren-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for KREN zero-copy IPC"

[dependencies]
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rand = "0.8"

