[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "kren"
version = "0.1.0"
description = "Zero-copy shared memory IPC library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "KREN Contributors" }
]
keywords = ["ipc", "shared-memory", "zero-copy", "ring-buffer", "low-latency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/Cintu07/kren"
Repository = "https://github.com/Cintu07/kren"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
python-source = "python"
module-name = "kren.kren"

[tool.pytest.ini_options]
testpaths = ["tests"]
